SpEL 문법 교정,최신자바최적화,야후 파이낸스 응답 구조에 맞게 Map<String, Object> 및 이의 컬렉션 형태인List<Map<String, Object>> 제네릭을 완벽히 할당